src/app.scss
@use 'styles/variables' as *;

*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}



body {
	font-family: $font-stack;
	line-height: 1.6;
	color: #ffffff;
	background-image: url('lib/images/background4.jpg');
	background-size: cover;
	background-position: center;
	background-attachment: fixed;
	background-repeat: no-repeat;
}

main {
	max-width: $max-width;
	margin: 0 auto;
	padding: $padding-y $padding-x;
}

a {
	color: #ffffff;
	text-decoration: none;

	&:hover {
		color: $color-accent;
	}
}

h1,
h2,
h3 {
	line-height: 1.25;
}

